crates/test-files/fixtures/compile_errors/invalid_tx_field.fe
contract Foo:

  pub def foo():
    tx.foo